crud admin table v align fixed

--- a/Project/public/css/crud_admin.css
+++ b/Project/public/css/crud_admin.css
@@ -254,6 +254,10 @@ h1 {
   padding: 1em 1em;
 }
 
+.container2 td {
+  vertical-align: baseline;
+}
+
 .container3 {
   margin: 30px;
 }
